<resources>
    <string name="app_name">Learn Math 1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    menu   -->
    <string name="menu_home">Trang chủ</string>
    <string name="menu_profile">Thông tin người dùng</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_title_control">Điều khiển</string>

    <!--    content-->
    <string name="content_question">Câu hỏi</string>
    <string name="answer1">Đáp án 1</string>
    <string name="answer2">Đáp án 2</string>
    <string name="answer3">Đáp án 3</string>
    <string name="answer4">Đáp án 4</string>
    <string name="complete">Hoàn thành</string>
    <string name="learn_math_1">Học toán 1</string>
    <string name="score">Số điểm: </string>
    <string name="register">Đăng ký</string>
    <string name="password">Mật khẩu</string>
    <string name="rePassword">Nhập lại mật khẩu</string>
    <string name="email">Email</string>

    <string name="home_second">Home Second</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
