<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="@string/menu_title_control">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>


</menu>