<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Câu 1"
                android:textColor="#ff0011"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/content_question"
                android:textColor="#000000"
                android:autoSizeTextType="uniform"
                android:textSize="30sp"
                android:textStyle="italic" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp">

            <RadioButton
                android:id="@+id/radA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/answer1"
                android:textColor="#1502c7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/answer2"
                android:textColor="#1502c7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/answer3"
                android:textColor="#1502c7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/answer4"
                android:textColor="#1502c7"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>